Include more location information in services
